# pyvavr

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
pyvavr/: __init__.py  attempts.py  curry.py  either.py  exceptions.py  option.py  validation.py
pyvavr/collection/: list.py  queue.py
tests/: attempts_test.py  curry_test.py  either_test.py  option_test.py  try_test.py  validation_test.py
tests/collection/: list_test.py  queue_test.py
